--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,14 @@ header, article, aside {
     background-color: rgb(62,96,111);
 }
 
+header {
+    margin-bottom: .5rem;
+}
+
 aside section {
     background-color: rgb(145,170,157);
+    padding: 1rem;
+    margin: .5rem .5rem;
 }
 
 .main-logo img {
@@ -35,4 +41,67 @@ figure {
 figure img {
     max-width: 100%;
     width: 100%;
+}
+
+.main-wrapper {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+main {
+    width: 68.5%;
+    float: left;
+    margin-right: 1rem;
+}
+
+aside {
+    width: 30%;
+    float: left;
+}
+
+h1 {
+    margin-top: 0;  
+}
+
+nav ul {
+    list-style: none;
+    padding: 2rem 0 0 2rem;
+}
+
+nav ul li {
+    float: left;
+    margin-right: 2rem;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.main-logo {
+    float: left;
+    margin-right: 2rem;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:link {
+    color: aqua;
+}
+
+a:visited {
+    color: cadetblue;
+}
+
+aside a:visited {
+    color: purple;
+}
+
+a:hover {
+    color: rgb(252,255,245);
+    text-decoration: underline;
 }
